terraform/subnets.tf
data "aws_availability_zones" "available" {
  state = "available"
}

resource "aws_subnet" "public_1" {
  vpc_id = aws_vpc.main.id

  cidr_block = "192.168.0.0/18"

  availability_zone = data.aws_availability_zones.available.names[0]

  map_public_ip_on_launch = true

  tags = {
    Name                        = "public-${data.aws_availability_zones.available.names[0]}"
    "kubernetes.io/cluster/eks" = "shared"
    "kubernetes/io/role/elb"    = "1"
  }
}

resource "aws_subnet" "public_2" {
  vpc_id = aws_vpc.main.id

  cidr_block = "192.168.64.0/18"

  availability_zone = data.aws_availability_zones.available.names[1]

  map_public_ip_on_launch = true

  tags = {
    Name                        = "public-${data.aws_availability_zones.available.names[1]}"
    "kubernetes.io/cluster/eks" = "shared"
    "kubernetes/io/role/elb"    = "1"
  }
}

resource "aws_subnet" "private_1" {
  vpc_id = aws_vpc.main.id

  cidr_block = "192.168.128.0/18"

  availability_zone = data.aws_availability_zones.available.names[0]

  map_public_ip_on_launch = true

  tags = {
    Name                        = "private-${data.aws_availability_zones.available.names[0]}"
    "kubernetes.io/cluster/eks" = "shared"
    "kubernetes/io/role/elb"    = "1"
  }
}


resource "aws_subnet" "private_2" {
  vpc_id = aws_vpc.main.id

  cidr_block = "192.168.192.0/18"

  availability_zone = data.aws_availability_zones.available.names[1]

  map_public_ip_on_launch = true

  tags = {
    Name                        = "private-${data.aws_availability_zones.available.names[1]}"
    "kubernetes.io/cluster/eks" = "shared"
    "kubernetes/io/role/elb"    = "1"
  }
}
